--- a/frontend/src/nav/NavBar.scss
+++ b/frontend/src/nav/NavBar.scss
@@ -1,5 +1,5 @@
 .NavBar {
-  background-color: #D8D7D7;
+  background-color: #AAAAAA;
   width: 100%;
   margin: 4em auto;
 
@@ -7,7 +7,7 @@
     list-style-type: none;
     padding: 0;
     justify-content: space-between;
-    width: 25em;
+    width: 33em;
     margin: 0 0 0 auto;
 
     li {
