--- a/frontend/src/student/StudentAssignment.scss
+++ b/frontend/src/student/StudentAssignment.scss
@@ -14,9 +14,13 @@
       }
 
   }
-}
+  .essayImage{
+    width: 25%;
+    height: 25%;
+  }
 
-.essayImage{
-  width: 40%;
-  height: 40%;
+  .essayPDF{
+    width: 25em;
+    height: 25em;
+  }
 }
